--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -48,13 +49,38 @@
         android:layout_below="@+id/toolbar"
         android:background="#82ffffff" />
 
+
+    <!--Buttomber
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/buttonBar">
+
+        <com.roughike.bottombar.BottomBar
+            android:id="@+id/bottomBar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            app:bb_tabXmlResource="@xml/buttom_menu"
+            app:bb_inActiveTabAlpha="0.7"
+            app:bb_activeTabAlpha="1"
+            app:bb_inActiveTabColor="#757575"
+            app:bb_activeTabColor="#00B8D4" />
+    </LinearLayout>
+
+    -->
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btAddCon"
         android:background="@mipmap/ic_addfha2"
         android:onClick="clickAddContact"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
+
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
